2011-02-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m:
	* Source/NSProcessInfo.m:
	* Source/NSConcretePointerFunctions.m:
	* Source/GSFFCallInvocation.m:
	* Source/NSZone.m:
	* Source/NSCallBacks.m:
	* Source/win32/NSMessagePortNameServer.m:
	* Source/NSFileManager.m:
	* Source/NSURLProtocol.m:
	* Source/objc-load.m:
	* Source/NSException.m:
	* Source/cifframe.m:
	* Source/NSLog.m:
	* Tools/defaults.m:
	* Tests/base/NSInvocation/Resources/InvokeProxy.m:
	Remove obsolete calls to objc_malloc() in favour of NSZoneMalloc() or
	malloc() where using zones is not appropriate.

2011-02-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFCallInvocation.m: Updated two obsolete runtime calls
	* Source/common.h: Revert last change as it seemed pointless to
	define macros within a private header which reproduce functions
	we don't actually use (or want to use) within base. I think/hope
	that the tiny change to GSFFcallInvocation.m is all that was needed.

2011-02-19 16:02  David Chisnall <theraven@gna.org>

	* libs/base/trunk/Source/common.h: Add some macros that map some
	libobjc functions to their runtime-specific variants.
	This avoids the need for ugly #ifdefs everywhere (the next commit
	will try to clean up some of this mess), and lets us use the _np
	function names everywhere to explicitly note that we are using
	runtime functions that are not present on OS X - apparently the
	new GCC runtime does not add this suffix for some reason.

2011-02-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDecimalNumber.m:
	* Source/NSNumber.m:
	Quick hacks to try to get NaN comparison working.

2011-02-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDateFormatter.m:
	* Source/NSNumberFormatter.m:
	Fix -initWithCoder: methods to create internal ivar storage.

2011-02-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m:
	* Documentation/coding-standards.texi:
	* Headers/Foundation/NSXMLParser.h:
	Documentation tweaks.
